fix: defibrilator cards display update on mobile

--- a/src/app/components/defibrilator-info-card/defibrilator-info-card.component.scss
+++ b/src/app/components/defibrilator-info-card/defibrilator-info-card.component.scss
@@ -27,12 +27,17 @@
   font-weight: bold;
 }
 
+.desktop-view {
+  display: none;
+}
+
 @media screen and (min-width: 992px) {
   .mobile-view {
     display: none;
   }
 
   .desktop-view {
+    display: block;
     width: 85%;
     margin-left: 3em;
   }
